--- a/index.html
+++ b/index.html
@@ -48,12 +48,9 @@
             let tripStops = [];
             let darkStyle, darkStyleOff;
             let otherVisible = true;
-			
             let selectedBus = null;
             let destination = null;
-			
             let clickEnabled = true;
-			
             async function initMap() {
                 map = new google.maps.Map(document.getElementById('map'), {
                     zoom: 14,
@@ -188,7 +185,7 @@
             }
             async function predictTime(tripId, d1, d2) {
                 try {
-                    const response = await fetch('http://127.0.0.1:5000/predict', {
+                    const response = await fetch('https://bluegalaxy4012.pythonanywhere.com/predict', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
