--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             }
             async function predictTime(tripId, d1, d2) {
                 try {
-                    const response = await fetch('https://bluegalaxy4012.pythonanywhere.com/predict', {
+                    const response = await fetch('https://trackerctp.onrender.com/predict', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
