--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
             <button class="btn" onclick="initiatePrediction()">Select vehicle/destination for time arrival prediction</button>
         </div>
         <div id="map"></div>
+        <div id="bottom-routefetchtext" style="position: fixed; bottom: 10px; left: 0; right: 0; text-align: center; font-size: 12px; color: black;"> Last time fetching a route: </div>
+        <div id="bottom-warningtext" style="position: fixed; bottom: 30px; left: 0; right: 0; text-align: center; font-size: 12px; color: black;"> Some warning messages will be displayed here. </div>
         <script>
             // 0 - red , 1 - green
             let map;
@@ -189,6 +191,7 @@
                     return;
                 }
                 try {
+                    const startTime = performance.now();
                     const response = await fetch('https://trackerctp.onrender.com/predict', {
                         method: 'POST',
                         headers: {
@@ -204,7 +207,8 @@
                         throw new Error(`HTTP error! status: ${response.status}`);
                     }
                     const result = await response.json();
-                    const predictedTime = parseFloat(result.predicted_time);
+                    const responseTime = (performance.now() - startTime) / 1000;
+                    const predictedTime = parseFloat(result.predicted_time) - responseTime;
                     const minutes = Math.floor(predictedTime / 60);
                     const seconds = Math.floor(predictedTime % 60);
                     alert(`Predicted time from selected vehicle to clicked point is ${minutes} minutes and ${seconds} seconds.`);
@@ -216,7 +220,7 @@
             async function initiatePrediction() {
                 destination = null;
                 clickEnabled = true;
-                alert("If you haven't selected a vehicle, do now. If you have, select a point on its current route.");
+                updateWarningText("If you haven't selected a vehicle, do now. If you have, select a point on its current route.");
                 markers.forEach(marker => {
                     if (marker.isVehicle) {
                         marker.addListener('click', async function() {
@@ -252,6 +256,11 @@
                             const busDistanceFromStart = calculateDistance(selectedBus.startLat, selectedBus.startLon, selectedBus.getPosition().lat(), selectedBus.getPosition().lng());
                             const markerDistanceFromStart = calculateDistance(selectedBus.startLat, selectedBus.startLon, destination.lat(), destination.lng());
                             await predictTime(tripId, busDistanceFromStart, markerDistanceFromStart);
+                            const iconUrl = tripId.endsWith('_0') ? 'icons/red-icon.png' : 'icons/green-icon.png';
+                            selectedBus.setIcon({
+                                url: iconUrl,
+                                scaledSize: new google.maps.Size(20, 20)
+                            });
                             destination = null;
                             selectedBus = null;
                         }
@@ -278,9 +287,11 @@
                             map.setCenter(userLocation);
                         }
                     }, () => {
+                        updateWarningMessage('Geolocation is not supported by this browser.');
                         console.error('Error getting user location.');
                     });
                 } else {
+                    updateWarningMessage('Geolocation is not supported by this browser.');
                     console.error('Geolocation is not supported by this browser.');
                 }
             }
@@ -299,7 +310,7 @@
                     lng: point.shape_pt_lon
                 }));
                 if (!shapePoints.length) {
-                    console.warn(`No shape data found for shape ID: ${shapeId}`);
+                    //console.warn(`No shape data found for shape ID: ${shapeId}`);
                     return;
                 }
                 const polyline = new google.maps.Polyline({
@@ -445,6 +456,7 @@
 
             function filterByRoute(routeId) {
                 //console.log(`Button pressed for route ID ${routeId}`);
+                updateRouteFetchText();
                 selectedBus = null;
                 fetchVehicles(routeId);
             }
@@ -462,6 +474,15 @@
                 const a = Math.sin(dLat / 2) * Math.sin(dLat / 2) + Math.cos(lat1 * Math.PI / 180) * Math.cos(lat2 * Math.PI / 180) * Math.sin(dLon / 2) * Math.sin(dLon / 2);
                 const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
                 return R * c;
+            }
+
+            function updateWarningText(message) {
+                document.getElementById("bottom-warningtext").innerText = message;
+            }
+
+            function updateRouteFetchText() {
+                const currentTime = new Date().toLocaleTimeString();
+                document.getElementById("bottom-routefetchtext").innerText = 'Last time fetching a route: ' + currentTime;
             }
         </script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDc8Y7sBvZTfC4PLc8xX8XwhVxmkU9dXJY&callback=initMap" async defer></script>
