--- a/index.html
+++ b/index.html
@@ -187,11 +187,12 @@
             }
             async function predictTime(tripId, d1, d2) {
                 if (d1 > d2) {
-                    alert("You should select a destination that's in on the current vehicle route direction, not behind it.");
+                    alert("You should select a destination that's in on the current vehicle colored route direction, not behind it.");
                     return;
                 }
                 try {
                     const startTime = performance.now();
+                    updateWarningMessage("Currently calculating the estimated arrival time, please wait...");
                     const response = await fetch('https://trackerctp.onrender.com/predict', {
                         method: 'POST',
                         headers: {
@@ -215,12 +216,14 @@
                 } catch (error) {
                     console.error('Error predicting time:', error);
                     alert("Error predicting time.");
+                } finally {
+                    updateWarningMessage("Some warning messages will be displayed here.");
                 }
             }
             async function initiatePrediction() {
                 destination = null;
                 clickEnabled = true;
-                updateWarningText("If you haven't selected a vehicle, do now. If you have, select a point on its current route.");
+                updateWarningText("If you haven't selected a vehicle, do now. If you have, select a point on its current colored route direction.");
                 markers.forEach(marker => {
                     if (marker.isVehicle) {
                         marker.addListener('click', async function() {
@@ -232,14 +235,15 @@
                             if (selectedBus) {
                                 selectedBus.setIcon({
                                     url: iconUrl,
-                                    scaledSize: new google.maps.Size(20, 20)
+                                    scaledSize: new google.maps.Size(30, 30)
                                 });
                             }
                             selectedBus = marker;
                             selectedBus.setIcon({
                                 url: selectedIconUrl,
-                                scaledSize: new google.maps.Size(20, 20)
+                                scaledSize: new google.maps.Size(30, 30)
                             });
+                            alert("Vehicle selected.");
                             clickEnabled = true;
                         });
                     }
@@ -249,7 +253,7 @@
                         if (!clickEnabled) return;
                         clickEnabled = false;
                         if (!selectedBus) {
-                            alert("First select a vehicle.");
+                            updateWarningText("First select a vehicle after pressing the button.");
                         } else {
                             destination = event.latLng;
                             const tripId = selectedBus.tripId;
@@ -259,7 +263,7 @@
                             const iconUrl = tripId.endsWith('_0') ? 'icons/red-icon.png' : 'icons/green-icon.png';
                             selectedBus.setIcon({
                                 url: iconUrl,
-                                scaledSize: new google.maps.Size(20, 20)
+                                scaledSize: new google.maps.Size(30, 30)
                             });
                             destination = null;
                             selectedBus = null;
@@ -328,7 +332,7 @@
                     map: map,
                     icon: {
                         url: startIconUrl,
-                        scaledSize: new google.maps.Size(28, 28)
+                        scaledSize: new google.maps.Size(32, 32)
                     }
                 });
                 markers.push(startMarker);
@@ -422,7 +426,7 @@
                     title: titlu,
                     icon: {
                         url: iconUrl,
-                        scaledSize: new google.maps.Size(20, 20)
+                        scaledSize: new google.maps.Size(30, 30)
                     }
                 });
                 marker.isVehicle = true;
